--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "discordie": "latest",
-    "node-yaml-config": "0.0.4"
+    "node-yaml-config": "0.0.4",
+    "request": "latest"
   }
 }
